grammar.js
    source: ($) => repeat($.source_line),
    source_line: ($) =>
      seq(
        choice(
          field("symbol", $._symbol),
          field("label", $._label),
          field("inst", $._inst),
          seq(field("label", $._label), field("inst", $._inst)),
        ),
        token(prec(1, /\r?\n/)),
      ),

    // Symbols
    _symbol: ($) => choice($.symbol_eq, $.symbol_assign, $.symbol_set),
    _label: ($) => choice($.label, $.local_label, $.unnamed_label),
    _inst: ($) => choice($.macro_inst, $.actual_inst, $._pseudo_inst),

    // Macro instruction
    pseudo_inst_addr: ($) => seq($.dot_keyword_addr, $._pseudo_inst_addr_args),
    _pseudo_inst_addr_args: ($) =>
      seq(
        field("value", $._expression),
        optional(seq(",", $._pseudo_inst_addr_args)),
      ),

    // .align
    pseudo_inst_align: ($) =>
      seq(
        $.dot_keyword_align,
        field("align", $._expression),
        optional(seq(",", field("fill", $._expression))),
      ),

    // .asciiz
    pseudo_inst_asciiz: ($) =>
      seq($.dot_keyword_asciiz, field("value", $.string)),

    // .assert
    pseudo_inst_assert: ($) =>
      seq($.dot_keyword_assert, $._pseudo_inst_assert_arg1),
    _pseudo_inst_assert_arg1: ($) =>
      seq(
        field("cond", $._expression),
        optional(seq(",", $._pseudo_inst_assert_arg2)),
      ),
    pseudo_inst_assert_action: (_) =>
      choice(
        make_case_insentive("warning"),
        make_case_insentive("error"),
        make_case_insentive("ldwarning"),
        make_case_insentive("lderror"),
      ),

    // .autoimport
    pseudo_inst_autoimport: ($) =>
      seq(
        $.dot_keyword_autoimport,
        field("option", $.pseudo_inst_on_off_option),
      ),

    // .bankbytes
    pseudo_inst_bankbytes: ($) =>
      seq($.dot_keyword_bankbytes, $._pseudo_inst_bankbytes_args),
    _pseudo_inst_bankbytes_args: ($) =>
      seq(
        field("value", $._expression),
        optional(seq(",", $._pseudo_inst_bankbytes_args)),
      ),

    // .bss
    pseudo_inst_bss: ($) => $.dot_keyword_bss,

    // .byte
    pseudo_inst_byte: ($) => seq($.dot_keyword_byte, $._pseudo_inst_byte_args),
    _pseudo_inst_byte_args: ($) =>
      seq(
        field("value", $._expression),
        optional(seq(",", $._pseudo_inst_byte_args)),
      ),

    // .case
    pseudo_inst_case: ($) =>
      seq($.dot_keyword_case, field("option", $.pseudo_inst_on_off_option)),

    // .charmap
    pseudo_inst_charmap: ($) =>
      seq(
        $.dot_keyword_charmap,
        field("src", $._expression),
        ",",
        field("dst", $._expression),
      ),

    // .code
    pseudo_inst_code: ($) => $.dot_keyword_code,

    // .condes
    pseudo_inst_condes: ($) =>
      seq(
        $.dot_keyword_condes,
        field("name", $.symbol),
        ",",
        field("type", $.pseudo_inst_condes_type),
        optional(seq(",", field("priority", $._expression))),
      ),
    pseudo_inst_condes_type: ($) =>
      choice(
        make_case_insentive("constructor"),
        make_case_insentive("destructor"),
        make_case_insentive("interruptor"),
        $._expression,
      ),

    // .constructor
    pseudo_inst_constructor: ($) =>
      seq(
        $.dot_keyword_constructor,
        field("name", $.symbol),
        optional(seq(",", field("priority", $._expression))),
      ),

    // .data
    pseudo_inst_data: ($) => $.dot_keyword_data,

    // .dbyt
    pseudo_inst_dbyt: ($) => seq($.dot_keyword_dbyt, $._pseudo_inst_dbyt_args),
    _pseudo_inst_dbyt_args: ($) =>
      seq(
        field("value", $._expression),
        optional(seq(",", $._pseudo_inst_dbyt_args)),
      ),

    // .debuginfo
    pseudo_inst_debuginfo: ($) =>
      seq(
        $.dot_keyword_debuginfo,
        field("option", $.pseudo_inst_on_off_option),
      ),

    // .define
    pseudo_inst_define: ($) =>
      choice($._pseudo_inst_define_normal, $._pseudo_inst_define_func),
    _pseudo_inst_define_normal: ($) =>
      seq(
        $.dot_keyword_define,
        field("name", $.symbol),
        field("body", optional($.pseudo_inst_define_body)),
      ),
    _pseudo_inst_define_func: ($) =>
      seq(
        $.dot_keyword_define,
        field("name", $.symbol),
        token.immediate("("),
        $._pseudo_inst_define_params,
        ")",
        field("body", optional($.pseudo_inst_define_body)),
      ),
    pseudo_inst_define_body: (_) => token(prec(-1, /.*/)),

    // .delmacro
    pseudo_inst_delmacro: ($) =>
      seq($.dot_keyword_delmacro, field("name", $.symbol)),

    // .destructor
    pseudo_inst_destructor: ($) =>
      seq(
        $.dot_keyword_destructor,
        field("name", $.symbol),
        optional(seq(",", field("priority", $._expression))),
      ),

    // .dword
    pseudo_inst_dword: ($) =>
      seq($.dot_keyword_dword, $._pseudo_inst_dword_args),
    _pseudo_inst_dword_args: ($) =>
      seq(
        field("value", $._expression),
        optional(seq(",", $._pseudo_inst_dword_args)),
      ),

    // .else
    pseudo_inst_else: ($) => $.dot_keyword_else,

    // .elseif
    pseudo_inst_elseif: ($) =>
      seq($.dot_keyword_elseif, field("cond", $._expression)),

    // .end
    pseudo_inst_end: ($) => $.dot_keyword_end,

    // .endif
    pseudo_inst_endif: ($) => $.dot_keyword_endif,

    // .endmacro
    pseudo_inst_endmacro: ($) => $.dot_keyword_endmacro,

    // .endrepeat
    pseudo_inst_endrepeat: ($) => $.dot_keyword_endrepeat,

    // .enum
    pseudo_inst_enum: ($) =>
      seq(
        $.dot_keyword_enum,
        field("name", $.symbol),
        token(prec(1, /\r?\n/)),
        optional($._pseudo_inst_enum_fields),
        $.dot_keyword_endenum,
      ),
    _pseudo_inst_enum_fields: ($) =>
      seq(
        field("field", $.pseudo_inst_enum_field),
        token(prec(1, /\r?\n/)),
        optional($._pseudo_inst_enum_fields),
      ),
    pseudo_inst_enum_field: ($) =>
      seq(
        field("name", $.symbol),
        optional(field("value", seq("=", $._expression))),
      ),

    // .error
    pseudo_inst_error: ($) =>
      seq($.dot_keyword_error, field("message", $.string)),

    // .exitmacro
    pseudo_inst_exitmacro: ($) => $.dot_keyword_exitmacro,

    // .export
    pseudo_inst_export: ($) =>
      seq($.dot_keyword_export, $._pseudo_inst_export_symbols),
    _pseudo_inst_export_symbols: ($) =>
      seq(
        field("symbol", $.pseudo_inst_export_symbol),
        optional(seq(",", $._pseudo_inst_export_symbols)),
      ),
    pseudo_inst_export_symbol: ($) =>
      seq(
        field("name", $.symbol),
        optional($._pseudo_inst_export_symbol_opt1),
        optional($._pseudo_inst_export_symbol_opt2),
      ),
    _pseudo_inst_export_symbol_opt1: ($) =>
      seq(token(":"), field("spec", $.pseudo_inst_addr_spec)),
    _pseudo_inst_export_symbol_opt2: ($) =>
      seq(choice("=", ":="), field("expr", $._expression)),

    // .exportzp
    pseudo_inst_exportzp: ($) =>
      seq($.dot_keyword_exportzp, $._pseudo_inst_exportzp_symbols),
    _pseudo_inst_exportzp_symbols: ($) =>
      seq(
        field("symbol", $.pseudo_inst_exportzp_symbol),
        optional(seq(",", $._pseudo_inst_exportzp_symbols)),
      ),
    pseudo_inst_exportzp_symbol: ($) =>
      seq(
        field("name", $.symbol),
        optional($._pseudo_inst_exportzp_symbol_opt1),
        optional($._pseudo_inst_exportzp_symbol_opt2),
      ),
    _pseudo_inst_exportzp_symbol_opt1: ($) =>
      seq(token(":"), field("spec", $.pseudo_inst_addr_spec)),
    _pseudo_inst_exportzp_symbol_opt2: ($) =>
      seq(choice("=", ":="), field("expr", $._expression)),

    // .faraddr
    pseudo_inst_faraddr: ($) =>
      seq($.dot_keyword_faraddr, $._pseudo_inst_faraddr_args),
    _pseudo_inst_faraddr_args: ($) =>
      seq(
        field("value", $._expression),
        optional(seq(",", $._pseudo_inst_faraddr_args)),
      ),

    // .fatal
    pseudo_inst_fatal: ($) =>
      seq($.dot_keyword_fatal, field("message", $.string)),

    // .feature
    pseudo_inst_feature: ($) =>
      seq($.dot_keyword_feature, $._pseudo_inst_feature_items),
    _pseudo_inst_feature_items: ($) =>
      seq(
        field("item", $.pseudo_inst_feature_item),
        optional(seq(",", $._pseudo_inst_feature_items)),
      ),
    pseudo_inst_feature_item: ($) =>
      seq(
        field("name", $.pseudo_inst_feature_name),
        optional(field("option", $.pseudo_inst_on_off_option)),
      ),
    pseudo_inst_feature_name: (_) =>
      choice(
        make_case_insentive("at_in_identifiers"),
        make_case_insentive("bracket_as_indirect"),
        make_case_insentive("c_comment"),
        make_case_insentive("dollar_in_identifiers"),
        make_case_insentive("dollar_is_pc"),
        make_case_insentive("force_range"),
        make_case_insentive("labels_without_colons"),
        make_case_insentive("leading_dot_in_identifiers"),
        make_case_insentive("line_continuations"),
        make_case_insentive("long_jsr_jmp_rts"),
        make_case_insentive("loose_char_term"),
        make_case_insentive("loose_string_term"),
        make_case_insentive("missing_char_term"),
        make_case_insentive("org_per_seg"),
        make_case_insentive("pc_assignment"),
        make_case_insentive("string_escapes"),
        make_case_insentive("ubiquitous_idents"),
        make_case_insentive("underline_in_numbers"),
      ),

    // .fileopt
    pseudo_inst_fileopt: ($) =>
      seq(
        $.dot_keyword_fileopt,
        field("name", $.pseudo_inst_fileopt_name),
        ",",
        field("content", $.string),
      ),
    pseudo_inst_fileopt_name: (_) =>
      choice(
        make_case_insentive("author"),
        make_case_insentive("comment"),
        make_case_insentive("compiler"),
      ),

    // .forceimport
    pseudo_inst_forceimport: ($) =>
      seq($.dot_keyword_forceimport, $._pseudo_inst_forceimport_args),
    _pseudo_inst_forceimport_args: ($) =>
      seq(
        field("symbol", $.pseudo_inst_forceimport_symbol),
        optional(seq(",", $._pseudo_inst_forceimport_args)),
      ),
    pseudo_inst_forceimport_symbol: ($) => field("name", $.symbol),

    // .global
    pseudo_inst_global: ($) =>
      seq($.dot_keyword_global, $._pseudo_inst_global_args),
    _pseudo_inst_global_args: ($) =>
      seq(
        field("symbol", $.symbol),
        optional(seq(",", $._pseudo_inst_global_args)),
      ),

    // .globalzp
    pseudo_inst_globalzp: ($) =>
      seq($.dot_keyword_globalzp, $._pseudo_inst_globalzp_args),
    _pseudo_inst_globalzp_args: ($) =>
      seq(
        field("symbol", $.symbol),
        optional(seq(",", $._pseudo_inst_globalzp_args)),
      ),

    // .hibytes
    pseudo_inst_hibytes: ($) =>
      seq($.dot_keyword_hibytes, $._pseudo_inst_hibytes_args),
    _pseudo_inst_hibytes_args: ($) =>
      seq(
        field("value", $._expression),
        optional(seq(",", $._pseudo_inst_hibytes_args)),
      ),

    // .i16
    pseudo_inst_i16: ($) => $.dot_keyword_i16,

    // .i8
    pseudo_inst_i8: ($) => $.dot_keyword_i8,

    // .if
    pseudo_inst_if: ($) => seq($.dot_keyword_if, field("cond", $._expression)),

    // .ifblank
    pseudo_inst_on_off_option: (_) =>
      choice("+", "-", make_case_insentive("on"), make_case_insentive("off")),

    // Address specification
    pseudo_inst_addr_spec: (_) =>
      choice(
        make_case_insentive("abs"),
        make_case_insentive("absolute"),
        make_case_insentive("default"),
        make_case_insentive("direct"),
        make_case_insentive("dword"),
        make_case_insentive("far"),
        make_case_insentive("long"),
        make_case_insentive("near"),
        make_case_insentive("zeropage"),
        make_case_insentive("zp"),
      ),

    // Unlimited in IntArg
    _expression: ($) =>
      choice($.unary_expression, $.binary_expression, $._primary_expression),

    // Unary expression
    dot_keyword_addr: (_) => make_keyword(".addr"),
    dot_keyword_align: (_) => make_keyword(".align"),
    dot_keyword_asciiz: (_) => make_keyword(".asciiz"),
    dot_keyword_assert: (_) => make_keyword(".assert"),
    dot_keyword_autoimport: (_) => make_keyword(".autoimport"),
    dot_keyword_bankbytes: (_) => make_keyword(".bankbytes"),
    dot_keyword_bss: (_) => make_keyword(".bss"),
    dot_keyword_byte: (_) =>
      choice(make_keyword(".byt"), make_keyword(".byte")),
    dot_keyword_case: (_) => make_keyword(".case"),
    dot_keyword_charmap: (_) => make_keyword(".charmap"),
    dot_keyword_code: (_) => make_keyword(".code"),
    dot_keyword_condes: (_) => make_keyword(".condes"),
    dot_keyword_constructor: (_) => make_keyword(".constructor"),
    dot_keyword_data: (_) => make_keyword(".data"),
    dot_keyword_dbyt: (_) => make_keyword(".dbyt"),
    dot_keyword_debuginfo: (_) => make_keyword(".debuginfo"),
    dot_keyword_define: (_) => make_keyword(".define"),
    dot_keyword_delmacro: (_) =>
      choice(make_keyword(".delmac"), make_keyword(".delmacro")),
    dot_keyword_destructor: (_) => make_keyword(".destructor"),
    dot_keyword_dword: (_) => make_keyword(".dword"),
    dot_keyword_else: (_) => make_keyword(".else"),
    dot_keyword_elseif: (_) => make_keyword(".elseif"),
    dot_keyword_end: (_) => make_keyword(".end"),
    dot_keyword_endenum: (_) => make_keyword(".endenum"),
    dot_keyword_endif: (_) => make_keyword(".endif"),
    dot_keyword_endmacro: (_) =>
      choice(make_keyword(".endmac"), make_keyword(".endmacro")),
    dot_keyword_endproc: (_) => make_keyword(".endproc"),
    dot_keyword_endrepeat: (_) => make_keyword(".endrepeat"),
    dot_keyword_endscope: (_) => make_keyword(".endscope"),
    dot_keyword_enum: (_) => make_keyword(".enum"),
    dot_keyword_error: (_) => make_keyword(".error"),
    dot_keyword_exitmacro: (_) =>
      choice(make_keyword(".exitmac"), make_keyword(".exitmacro")),
    dot_keyword_export: (_) => make_keyword(".export"),
    dot_keyword_exportzp: (_) => make_keyword(".exportzp"),
    dot_keyword_faraddr: (_) => make_keyword(".faraddr"),
    dot_keyword_fatal: (_) => make_keyword(".fatal"),
    dot_keyword_feature: (_) => make_keyword(".feature"),
    dot_keyword_fileopt: (_) =>
      choice(make_keyword(".fileopt"), make_keyword(".fopt")),
    dot_keyword_forceimport: (_) => make_keyword(".forceimport"),
    dot_keyword_global: (_) => make_keyword(".global"),
    dot_keyword_globalzp: (_) => make_keyword(".globalzp"),
    dot_keyword_hibytes: (_) => make_keyword(".hibytes"),
    dot_keyword_i16: (_) => make_keyword(".i16"),
    dot_keyword_i8: (_) => make_keyword(".i8"),
    dot_keyword_if: (_) => make_keyword(".if"),
    symbol: ($) => $._identifier,
    number: ($) => choice($._number_bin, $._number_dec, $._number_hex),
    _number_hex: (_) => seq("$", /[a-fA-F0-9]+/),
    _number_dec: (_) => /[0-9]+/,
    _number_bin: (_) => seq("%", /[0-1]+/),
    string: (_) => seq('"', /[^"]*/, '"'),
    _identifier: (_) => /[a-zA-Z_][0-9a-zA-Z_]*/,

    // Comment
