test/corpus/inst/pseudo/bss.txt
==================================================
BSS pseudo instruction
==================================================

.bss

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_bss
      (dot_keyword_bss))))
