test/corpus/inst/pseudo/case.txt
==================================================
CASE pseudo instruction
==================================================

.case +
.case -
.case on
.case off

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_case
      (dot_keyword_case)
      option: (pseudo_inst_on_off_option)))
 (source_line
  inst: (pseudo_inst_case
      (dot_keyword_case)
      option: (pseudo_inst_on_off_option)))
 (source_line
  inst: (pseudo_inst_case
      (dot_keyword_case)
      option: (pseudo_inst_on_off_option)))
 (source_line
  inst: (pseudo_inst_case
      (dot_keyword_case)
      option: (pseudo_inst_on_off_option))))
