test/corpus/inst/pseudo/code.txt
==================================================
CODE pseudo instruction
==================================================

.code

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_code
      (dot_keyword_code))))
