test/corpus/inst/pseudo/data.txt
==================================================
DATA pseudo instruction
==================================================

.data

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_data
      (dot_keyword_data))))
