test/corpus/inst/pseudo/dbyt.txt
==================================================
DBYT pseudo instruction
==================================================

.dbyt $1
.dbyt $1, $2

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_dbyt
      (dot_keyword_dbyt)
      value: (number)))
 (source_line
  inst: (pseudo_inst_dbyt
      (dot_keyword_dbyt)
      value: (number)
      value: (number))))
