test/corpus/inst/pseudo/else.txt
==================================================
ELSE pseudo instruction
==================================================

.else

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_else
      (dot_keyword_else))))
