test/corpus/inst/pseudo/elseif.txt
==================================================
ELSEIF pseudo instruction
==================================================

.elseif $1

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_elseif
      (dot_keyword_elseif)
      cond: (number))))
