test/corpus/inst/pseudo/end.txt
==================================================
END pseudo instruction
==================================================

.end

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_end
      (dot_keyword_end))))
