test/corpus/inst/pseudo/endif.txt
==================================================
ENDIF pseudo instruction
==================================================

.endif

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_endif
      (dot_keyword_endif))))
