test/corpus/inst/pseudo/endmacro.txt
==================================================
ENDMACRO pseudo instruction
==================================================

.endmac
.endmacro

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_endmacro
      (dot_keyword_endmacro)))
 (source_line
  inst: (pseudo_inst_endmacro
      (dot_keyword_endmacro))))
