test/corpus/inst/pseudo/endrepeat.txt
==================================================
ENDREPEAT pseudo instruction
==================================================

.endrepeat

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_endrepeat
      (dot_keyword_endrepeat))))
