test/corpus/inst/pseudo/endscope.txt
==================================================
ENDSCOPE pseudo instruction
==================================================

.endscope

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_endscope
      (dot_keyword_endscope))))
