test/corpus/inst/pseudo/error.txt
==================================================
ERROR pseudo instruction
==================================================

.error "message"

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_error
      (dot_keyword_error)
      message: (string))))
