test/corpus/inst/pseudo/fatal.txt
==================================================
FATAL pseudo instruction
==================================================

.fatal "message"

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_fatal
      (dot_keyword_fatal)
      message: (string))))
