test/corpus/inst/pseudo/forceimport.txt
==================================================
FORCEIMPORT pseudo instruction
==================================================

.forceimport sym
.forceimport sym1, sym2

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_forceimport
      (dot_keyword_forceimport)
      symbol: (pseudo_inst_forceimport_symbol
          name: (symbol))))
 (source_line
  inst: (pseudo_inst_forceimport
      (dot_keyword_forceimport)
      symbol: (pseudo_inst_forceimport_symbol
          name: (symbol))
      symbol: (pseudo_inst_forceimport_symbol
          name: (symbol)))))
