test/corpus/inst/pseudo/global.txt
==================================================
GLOBAL pseudo instruction
==================================================

.global sym
.global sym1, sym2

--------------------------------------------------

(source
 (source_line
  inst: (pseudo_inst_global
      (dot_keyword_global)
      symbol: (symbol)))
 (source_line
  inst: (pseudo_inst_global
      (dot_keyword_global)
      symbol: (symbol)
      symbol: (symbol))))
